# BlockSIgma

./: .gitignore  MVC_PATTERN.md  README.md  conftest.py  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py  start_fastapi.bat  start_fastapi.ps1
Test/: test_user.py
alembic/: alembic.ini  env.py
app/: config.py  database.py  jinja_view.py  main.py  tokens.py
app/db/: q_database.py
app/models/: models.py
app/routers/: predictions.py  signals_router.py  user.py
app/schema/: model_schema.py
app/static/CSS/: home.css  predictions.css
app/static/JS/: Predictions.js
app/templates/: Predictions.html  home.html
app/utils/: binance_price.py  mail_api.py  mail_date_format.py  mem_logger.py
app/views/: signals_views.py
app/views/predictions/: Hybrid_Model_12hr.py  Hybrid_Model_4hr.py  LSTM_model.py  prediction_main_12hr.py  prediction_main_4hr.py
worker/: __init__.py  celery_app.py  celery_config.py  trainer.py
