[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-mvc-app"
version = "1.0.0"
description = "FastAPI MVC Application"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "python-multipart>=0.0.6",
    "fastapi-cli",
]

[project.scripts]
fastapi-app = "app.main:app"

[tool.fastapi]
app = "app.main:app" 